# TravelPlanningAssistant

./: .gitignore  README.md  package-lock.json  pyproject.toml  requirements.txt
backend/: .env.example  requirements.txt
backend/app/: __init__.py  dependencies.py  main.py
backend/app/agent/: answer_generator.py  context_manager.py  executor.py  graph.py  input_normalizer.py  orchestrator.py  planner.py  problem_analyzer.py  profile_updater.py  reflection.py  response_builder.py  state.py  travel_agent.py  travel_semantics.py
backend/app/api/: chat.py  routes.py
backend/app/core/: config.py
backend/app/domain/: models.py
backend/app/llm/: model.py
backend/app/memory/: redis_memory.py
backend/app/rag/: embedding.py  loader.py  reranker.py  retriever.py  splitter.py
backend/app/research/: __init__.py  executor.py  fusion.py  models.py  normalizer.py  planner.py  reflection.py  summarizer.py
backend/app/schemas/: chat.py
backend/app/services/: agent_service.py  conversation_memory.py  intent.py  llm_service.py  memory.py  memory_service.py  multimodal_service.py  redis_memory.py  travel_agent_service.py
backend/app/tools/: amap_tool.py  base.py  browser_tool.py  ctrip_tool.py  database_tool.py  executor.py  implementations.py  python_tool.py  registry.py  search_tool.py  travel_tools.py  weather_tool.py  xiaohongshu_tool.py
backend/scripts/: verify_redis_memory.py
frontend/: .env.example  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx
frontend/src/components/: ChatPanel.jsx  (+3 more)
scripts/: scan_secrets.ps1
(+4 files in other folders)
