[project]
name = "travel-planning-assistant"
version = "0.1.0"
description = "Production-grade travel planning agent backend"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi==0.116.1",
  "uvicorn[standard]==0.35.0",
  "pydantic==2.11.7",
  "pydantic-settings==2.10.1",
  "httpx==0.28.1",
  "redis==6.2.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "backend"}

[tool.setuptools.packages.find]
where = ["backend"]

[tool.ruff]
line-length = 100

'target-version' = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N"]
